[project]
name = "bktools"
dynamic = ["version"]
description = "Buildkite-invoked helper tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "manifest-builder>=0.4.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
pipelinegen = "bktools.pipelinegen:main"
bktools-image-version-hash = "bktools.image_version_hash:main"
diffcomment = "bktools.diffcomment:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/bktools/_version.py"

[tool.setuptools_scm]
version_scheme = "guess-next-semver"
local_scheme = "node-and-date"

[[tool.uv.index]]
name = "repo.noa.re"
url = "https://repo.noa.re"
publish-url = "https://repo.noa.re/legacy"

[tool.ruff]
exclude = ["src/bktools/_version.py"]
