[project]
name = "bktools"
dynamic = ["version"]
description = "Buildkite-invoked helper tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.3",
    "manifest-builder>=0.4.1.dev18",
    "pyyaml>=6.0.3",
]

[project.scripts]
pipelinegen = "bktools.pipelinegen:main"
bktools-image-version-hash = "bktools.image_version_hash:main"
diffcomment = "bktools.diffcomment:main"
get-installation-token = "bktools.get_installation_token:main"
manifest-builder-on-checkout = "bktools.manifest_builder_on_checkout:main"
notify-relcoord = "bktools.notify_relcoord:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "post-release" }

[tool.hatch.build.hooks.vcs]
version-file = "src/bktools/_version.py"

[[tool.uv.index]]
name = "repo.noa.re"
url = "https://repo.noa.re"
publish-url = "https://repo.noa.re/"

[tool.ruff]
exclude = ["src/bktools/_version.py"]
